k8s/base/finance-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-api
  labels:
    app: finance-api
    component: api
spec:
  type: ClusterIP
  selector:
    app: finance-api
  ports:
  - name: http
    port: 8001
    targetPort: 8001
    protocol: TCP
  sessionAffinity: None
